feat: pin and search purchase policies
